fix: Update code css to make it clearer in dark mode

--- a/src/css/vuepress.css
+++ b/src/css/vuepress.css
@@ -103,10 +103,11 @@
 .vuepress-markdown-body code {
   margin: 0;
   padding: 0.25rem 0.5rem;
-  color: #476582;
-  font-size: 0.85em;
-  background-color: rgba(27, 31, 35, 0.05);
-  border-radius: 3px;
+  color: rgb(var(--v-theme-primary));
+  font-size: 0.85 em;
+  background-color: rgb(var(--v-theme-primary), var(--v-activated-opacity));
+  opacity:;
+  border-radius: 5px;
 }
 .vuepress-markdown-body code .token.deleted {
   color: #ec5975;
